Fri Nov 23 19:22:50 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c: Handle events in windows other
	than widget->event_window properly. (#65079, reported
	by Damon Chaplin)

	* gdk/gdkevents.c (gdk_event_get_coords): Fix x/y bug.

Fri Nov 23 18:57:46 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmessagedialog.c (gtk_message_dialog_init): Align
	the image at the top. (#65020, request from Seth Nickell)

Fri Nov 23 18:49:53 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/{gtkclist,gtkctree.c} (draw_row): Remove some strange
	arithmetic that was resulting in rows being drawn too low.
	(#65001, reported by Damon Chaplin)

Fri Nov 23 18:36:42 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkrange.c (gtk_range_button_press): Offset 
	invalidated range correctly.

	* gtk/gtkclist.c (hadjustment_value_changed): Fix scrolling 
	of title window. (#65001, reported by Damon Chaplin)

	* gtk/gtkcombo.c (gtk_combo_button_event_after): Replace
	horrible hack with use of ::event_after.

Thu Nov 22 15:01:03 2001  Owen Taylor  <otaylor@redhat.com>

	* Version 1.3.11

	* configure.in (ATK_REQUIRED_VERSION): Require
	GLib-1.3.11, Pango-0.22, ATK-0.7.

	* tests/prop-editor.c (property_widget): Restore
	to working as well as it did before.

	* gtk/gtklistitem.h: Mark deprecated since it is
	an integral part of GtkList.

 	* demos/gtk-demo/demo-common.h: New header file,
	for a common functions not important to the meat
	of the demos.
	
	* demos/gtk-demo/main.c (demo_ifind_file): Add a utility
	function to search for a file used by the demo.

	* demos/*.c: Use demo_find_file.

2001-11-23  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtktextbuffer.c (gtk_text_buffer_create_tag),
	gtk/gtkruler.c (gtk_ruler_get_metric): Actually commit typo 
	fixes already mentioned in ChangeLog entry on 2001-11-14.

	* docs/reference/gtk/tmpl/drawing.sgml: Minor markup fixes.

2001-11-23  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkfont-win32.c (gdk_font_from_description) : 