@@ -1,3 +1,8 @@
+Sat Nov 24 15:35:26 2001  Kristian Rietveld  <kristian@planet.nl>
+
+	* gtk/gtktreemodel.c (gtk_tree_model_foreach): free path before
+	we return (in case of a failure here)
+
 Fri Nov 23 19:22:50 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtknotebook.c: Handle events in windows other
